# DVWAPI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: graphql.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
src/handlers/: mod.rs  v1.rs  v2.rs  v3.rs  vulnerable.rs
tests/: actuator_tests.rs  admin_auth_tests.rs  api_basic_tests.rs  graphql_tests.rs  internal_api_tests.rs  vulnerability_tests.rs
tests/common/: mod.rs
